package backend.world.Movement;

public class NoOscillationStrategy implements MovePatternStrategy {

    @Override
    public void patternMove() {
        return;//no os        
    }

}
